# django-modern-csrf

./: .gitignore  README.md  SECURITY.md  pyproject.toml  tox.ini
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  main.yml
.github/worksflow/: main.yml
modern_csrf/: __init__.py  apps.py  decorators.py  middleware.py
tests/: test_decorators.py  test_middleware.py
tests/test_project/: settings.py  urls.py  views.py
